# Hartree-Fock-C

./: CMakeLists.txt  HF.cpp  HF.f90  HF.hpp  README.md  a.out  func.cpp  h2.XYZ  test.cpp  test.txt
include/: HF.hpp
src/: HF.cpp  func.cpp  quantnum.cpp
